--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>가상계정 생성기</title>
+    <title>가상계정 무한생성기</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* For custom scrollbar styling */
